demo1/project/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-demo 
  namespace: wordpress
spec:
  selector:
    project: www
    app: php-demo
  ports:
  - name: web
    port: 80
    targetPort: 80
#  type: NodePort
